Test/git-issues/git-issue-1373.dfy.expect
git-issue-1373.dfy(6,10): Error: NO NO NO
git-issue-1373.dfy(7,10): Error: NO NO NO
2 resolution/type errors detected in git-issue-1373.dfy
